--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,16 +7,77 @@ spray {
   # http://spray.io/documentation/1.2.1/spray-can/configuration/
   can {
     server {
+      # The value of the `Server` header to produce.
+      # Set to the empty string to disable rendering of the server header.
       server-header = spray-can/${spray.version}
+
+      # Enables/disables SSL encryption.
+      # If enabled the server uses the implicit `ServerSSLEngineProvider` member
+      # of the `Bind` command to create `SSLEngine` instances for the underlying
+      # IO connection.
       ssl-encryption = off
-      request-timeout = 10s
+
+      # The time after which an idle connection will be automatically closed.
+      # Set to `infinite` to completely disable idle connection timeouts.
+      idle-timeout = 60 s
+
+      # If a request hasn't been responded to after the time period set here
+      # a `spray.http.Timedout` message will be sent to the timeout handler.
+      # Set to `infinite` to completely disable request timeouts.
+      request-timeout = 40s
+
+      # After a `Timedout` message has been sent to the timeout handler and the
+      # request still hasn't been completed after the time period set here
+      # the server will complete the request itself with an error response.
+      # Set to `infinite` to disable timeout timeouts.
+      timeout-timeout = 2 s
+
+      # Enables/disables support for statistics collection and querying.
+      # Even though stats keeping overhead is small,
+      # for maximum performance switch off when not needed.
+      stats-support = on
+
+      # Enables/disables the addition of a `Remote-Address` header
+      # holding the clients (remote) IP address.
       remote-address-header = on
+
+
       interface       = "0.0.0.0"
       port            = 8082
     }
   }
   client {
+    # The default value of the `User-Agent` header to produce if no
+    # explicit `User-Agent`-header was included in a request.
+    # If this value is the empty string and no header was included in
+    # the request, no `User-Agent` header will be rendered at all.
     user-agent-header = spray-can/${spray.version}
+
+    # The time after which an idle connection will be automatically closed.
+    # Set to `infinite` to completely disable idle timeouts.
+    idle-timeout = 60 s
+
+    # The max time period that a client connection will be waiting for a response
+    # before triggering a request timeout. The timer for this logic is not started
+    # until the connection is actually in a state to receive the response, which
+    # may be quite some time after the request has been received from the
+    # application!
+    # There are two main reasons to delay the start of the request timeout timer:
+    # 1. On the host-level API with pipelining disabled:
+    #    If the request cannot be sent immediately because all connections are
+    #    currently busy with earlier requests it has to be queued until a
+    #    connection becomes available.
+    # 2. With pipelining enabled:
+    #    The request timeout timer starts only once the response for the
+    #    preceding request on the connection has arrived.
+    # Set to `infinite` to completely disable request timeouts.
+    request-timeout = 40 s
+
+    # The time period within which the TCP connecting process must be completed.
+    # Set to `infinite` to disable.
+    connecting-timeout = 10s
+
+
     proxy {
       # Proxy settings for unencrypted HTTP requests
       # Set to 'none' to always connect directly, 'default' to use the system
@@ -34,6 +95,7 @@ spray {
       https = default
     }
   }
+
   host-connector {
     # The maximum number of parallel connections that an `HttpHostConnector`
     # is allowed to establish to a host. Must be greater than zero.
