--- a/src/main/resources/default-application.conf
+++ b/src/main/resources/default-application.conf
@@ -1,5 +1,17 @@
 akka {
-  loglevel = DEBUG
+  loglevel = "INFO"
+  actor {
+    provider = "akka.remote.RemoteActorRefProvider"
+  }
+
+  remote {
+    enabled-transports = ["akka.remote.netty.tcp"]
+    netty.tcp {
+      hostname = "127.0.0.1"
+    }
+    log-sent-messages = on
+    log-received-messages = on
+  }
 }
 
 spray {
