Revert "appel direct serveur à serveur"
This reverts commit 669fb34fd5e3d470216975ebf8865e96fb40ee0c.

--- a/src/main/resources/default-application.conf
+++ b/src/main/resources/default-application.conf
@@ -1,17 +1,5 @@
 akka {
-  loglevel = "INFO"
-  actor {
-    provider = "akka.remote.RemoteActorRefProvider"
-  }
-
-  remote {
-    enabled-transports = ["akka.remote.netty.tcp"]
-    netty.tcp {
-      hostname = "127.0.0.1"
-    }
-    log-sent-messages = on
-    log-received-messages = on
-  }
+  loglevel = DEBUG
 }
 
 spray {
