--- a/src/main/resources/default-application.conf
+++ b/src/main/resources/default-application.conf
@@ -1,18 +1,9 @@
 akka {
-  loglevel = "INFO"
-  actor {
-    provider = "akka.remote.RemoteActorRefProvider"
-  }
-
-  remote {
-    enabled-transports = ["akka.remote.netty.tcp"]
-    netty.tcp {
-      hostname = "127.0.0.1"
-    }
-    log-sent-messages = on
-    log-received-messages = on
-  }
+  loglevel = DEBUG
+  log-config-on-start = off
+  event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
 }
+
 
 spray {
   # check the reference.conf in /spray-can/main/resources for all defined settings
